--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
 
 ## uncomment the following lines to override the default test script
 #script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("Quante"); Pkg.test("Quante"; coverage=true)'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("Quante"); Pkg.test("Quante"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("Quante")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
